Due to minor fix to the CSS so that way to work on smaller screens

--- a/style.css
+++ b/style.css
@@ -87,4 +87,8 @@ body,
 
 #logo {
     position: absolute;
+    height: 30%;
+    width: 30%;
+    max-height: 200px;
+    max-width: 200px;
 }
